# onlinecml

./: .gitignore  .python-version  404.html  CLAUDE.md  Makefile  OnlineCML_full_plan.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
api_reference/base/: index.html
api_reference/datasets/: index.html
api_reference/diagnostics/: index.html
api_reference/evaluation/: index.html
api_reference/forests/: index.html
api_reference/matching/: index.html
api_reference/metalearners/: index.html
api_reference/policy/: index.html
api_reference/propensity/: index.html
api_reference/reweighting/: index.html
contributing/adding_estimator/: index.html
contributing/contributing/: index.html
docs/: index.md
docs/api_reference/: base.md  datasets.md  diagnostics.md  evaluation.md  forests.md  matching.md  metalearners.md  policy.md  propensity.md  reweighting.md
docs/contributing/: adding_estimator.md  contributing.md
docs/examples/: 01_quickstart.ipynb  02_ipw_vs_aipw.ipynb  03_metalearner_comparison.ipynb  04_online_matching.ipynb  05_policy_exploration.ipynb  07_diagnostics.ipynb  08_concept_drift.ipynb  11_vs_econml_batch.ipynb  12_causal_tree_forest.ipynb
docs/getting_started/: installation.md  quickstart.md
docs/theory/: online_learning_basics.md  potential_outcomes.md  robinson_transformation.md  three_assumptions.md
examples/01_quickstart/: index.html
examples/02_ipw_vs_aipw/: index.html
examples/03_metalearner_comparison/: index.html
examples/04_online_matching/: index.html
examples/05_policy_exploration/: 05_policy_exploration.ipynb  index.html
examples/06_exploration_policies/: index.html
examples/07_diagnostics/: index.html
onlinecml/: __init__.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py
(+100 files in other folders)
